# better_NFT_Generator

./: .gitignore  README.md  __main__.py  make_art.py  pyproject.toml  rarity.json  requirements.txt
examples/csv/: nft.csv
examples/json/: 0.token.json  1.token.json  _metadata.json
input/arms/: ShortYellow.png:Zone.Identifier
maker/: checks.py  config.py  generate.py  image_helpers.py  image_printer.py  inputs.py  nft_json_template.py  setup_data.py  strings.py  writers.py
results/csv/: nft.csv
results/json/: 0.token.json  1.token.json  10.token.json  100.token.json  101.token.json  102.token.json  103.token.json  104.token.json  105.token.json  106.token.json  107.token.json  108.token.json  109.token.json  11.token.json  110.token.json  111.token.json  112.token.json  113.token.json  114.token.json  115.token.json  116.token.json  117.token.json  118.token.json  119.token.json  12.token.json  120.token.json  121.token.json  122.token.json  123.token.json  124.token.json  125.token.json  126.token.json  127.token.json  128.token.json  129.token.json  13.token.json  130.token.json  131.token.json  132.token.json  133.token.json  (+1461 more)
tests/: test_nft_generator.py
